--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
-  "name": "oden-blog",
+  "name": "next-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
-    "axios": "^0.21.1",
-    "firebase": "^8.6.8",
-    "next": "11.0.1",
+    "date-fns": "^2.22.1",
+    "gray-matter": "^4.0.3",
+    "next": "10.2.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "remark": "^13.0.0",
+    "remark-html": "^13.0.1"
   },
   "devDependencies": {
-    "@types/node": "^15.12.5",
-    "@types/react": "^17.0.11",
-    "@types/react-dom": "^17.0.8",
-    "typescript": "^4.3.4"
+    "@types/node": "^16.4.13",
+    "@types/react": "^17.0.16",
+    "typescript": "^4.3.5"
   }
 }
