--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "NODE_OPTIONS='--inspect' next dev",
+    "dev": "next dev",
+    "dev:vsc": "NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
     "date-fns": "^2.22.1",
+    "firebase": "^8.9.0",
     "gray-matter": "^4.0.3",
     "next": "10.2.3",
     "react": "17.0.2",
