--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^8.9.0",
     "gray-matter": "^4.0.3",
     "next": "10.2.3",
+    "next-images": "^1.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "remark": "^13.0.0",
