--- a/package.json
+++ b/package.json
@@ -16,12 +16,16 @@
     "next-images": "^1.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.2.0",
     "remark": "^13.0.0",
     "remark-html": "^13.0.1"
   },
   "devDependencies": {
     "@types/node": "^16.4.13",
     "@types/react": "^17.0.16",
+    "autoprefixer": "^10.3.3",
+    "postcss": "^8.3.6",
+    "tailwindcss": "^2.2.7",
     "typescript": "^4.3.5"
   }
 }
