add languages/framework section

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "date-fns": "^2.22.1",
     "firebase": "^8.9.0",
     "gray-matter": "^4.0.3",
