--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
     "axios": "^0.21.1",
     "date-fns": "^2.22.1",
     "firebase": "^8.9.0",
@@ -19,7 +20,8 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
     "remark": "^13.0.0",
-    "remark-html": "^13.0.1"
+    "remark-html": "^13.0.1",
+    "styled-components": "^5.3.1"
   },
   "devDependencies": {
     "@types/node": "^16.4.13",
